# conloan-tools

./: .gitignore  README.md  interface.txt  mkdocs.yml  pyproject.toml
docs/: corpus_setup.md  index.md  setup.md
scripts/: encode_corpus.sh  make_cqp_exact_query.sh
src/conloan_tools/: cli.py  conloan_data_bak.py  parse_conloan.py  resources.py  train_classifier.py
src/conloan_tools/annotation/: __init__.py  annotation.py  assistant.py  excel.py  inject_suggestions.py  make_dataset.py  make_sheet.py  refresh_replacement.py  translate.py  validate_sheet.py
src/conloan_tools/annotation/json/: make_from_plaintext.py  make_from_sheet.py  sheet_from_json.py
src/conloan_tools/annotation/sheet/: assistant.py  change_tag_prefix.py  excel.py  extract_disqualified.py  make_from_lemmas.py  replacement.py  translate.py  validate_sheet.py
src/conloan_tools/classifier/: __init__.py  classifier.py  data.py  eval.py  evaluate.py  kfold.py  schema.py  splits.py  train.py
src/conloan_tools/corpus/: __init__.py  bio.py  build_index.py  corpus.py  inspect_index.py  query.py  query_bak.py  scoring.py
src/conloan_tools/ner/: ner.py
src/conloan_tools/stz/: __init__.py  lemmatize.py  stz.py
src/conloan_tools/translate/: interactive.py  llm_translate.py  nt_translate.py  translate.py
src/conloan_tools/utils/: csv_extract.py  utils.py
src/conloan_tools/wb/: __init__.py  wb.py
src/conloan_tools/wiktionary/: __init__.py  extract_entries.py  label_entries.py  wiktionary.py  wiktionary_languages.csv
src/conloan_tools/wordnet/: __init__.py  query.py  wordnet.py
