
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conloan-tools"
version = "0.1.0"
description = "Utilities for parsing and processing loanword datasets for NLP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers==5.1.0",
    "torch",
    "torchvision",
    "markupsafe==2.1.5",
    "requests",
    "datasets", 
    "pyarrow",
    "accelerate",
    "huggingface-hub",
    "seqeval",
    "protobuf",
    "tqdm",
    "click",
    "xlsxwriter",
    "openpyxl",

    # NLP 
    "stanza",

    # OPUS MT
    "sentencepiece",
    "sacremoses",
]

[project.optional-dependencies]
torch = [
    "torch",
    "torchvision",
]

[project.scripts]
conloan = "conloan_tools.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["conloan_tools"]

[tool.setuptools]
# Map the empty prefix to the "src" directory
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"conloan_tools.wiktionary" = ["wiktionary_languages.csv"]
