[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
requires-python = ">=3.11, <3.12"

[project]
name = "conloan-tools"
version = "0.1.0"
description = "Utilities for parsing and processing loanword datasets for NLP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.2.1",
    "h5py",
    "numpy",
    "openpyxl",
    "pandas",
    "requests",
    "tqdm",
    "xlsxwriter",
]

[project.optional-dependencies]
models = [
    "accelerate>=1.1.0",   # Required to run 'Trainer' with 'PyTorch'.
    "datasets", 
    "huggingface-hub",
    "markupsafe==2.1.5",
    "sacremoses",          # Suggested for MarianTokenizer.
    "sentencepiece",       # Required  for MarianTokenizer.
    "seqeval",
    "stanza",
    "torch>=2.4",
    "transformers==5.1.0", 
]
docs = [
    "mkdocs"
]

[project.scripts]
conloan = "conloan_tools.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["conloan_tools*"]

[tool.setuptools]
# Map the empty prefix to the "src" directory
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"conloan_tools.wiktionary" = ["wiktionary_languages.csv"]
